# TumblePipe

./: .distignore  .gitignore  .readthedocs.yaml  LICENSE  README.md  TumblePipe.json  hpm.toml
.github/workflows/: build.yml  weekly-release.yml
asset_browser_catalogs/: _pipeline_catalog.py  _pipeline_clients.py  _pipeline_containers.py  _pipeline_departments.py  _pipeline_detail.py  _pipeline_drops.py  _pipeline_houdini.py  _pipeline_prefs.py  _pipeline_resolver.py  _pipeline_scene.py  _pipeline_settings_widget.py  _pipeline_thumbnails.py  _pipeline_types.py  _pipeline_uris.py  _pipeline_widgets.py  _pipeline_workfiles.py  pipeline.py  submit_jobs_dialog.py
deadline/Shell/: Runner.py  Shell.options  Shell.param  Shell.py
desktop/: TumblePipe.desk
docs/: changelog.md  compositing.md  composition.md  conf.py  configuration.md  deadline.md  development.md  index.md  installation.md  project_structure.md  requirements.txt
examples/config/: asset_info.json  config_convention.py  department_info.json  discord_info.json  kit_info.json  naming_convention.py  procedural_info.json  render_convention.py  render_info.json  shot_info.json  storage_convention.py
examples/launcher/: windows_launcher.bat
houdini/: TumblePipe.json
houdini/TumblePipe/: hpm.toml
ocio/: config.ocio  tumblehead.ocio
otls/: README.md  cop_th.build_comp.1.0.hda  cop_th.cop_material.1.0.hda  cop_th.cop_paint.1.0.hda  cop_th.depth_cull.1.0.hda  cop_th.gradient_map.1.0.hda  cop_th.import_lop_camera.1.0.hda  cop_th.lop_import.1.0.hda  cop_th.mask_painter.1.0.hda  cop_th.paint_scatter.1.0.hda  cop_th.roto_mask.1.0.hda  cop_th.th_a_b_slider.1.0.hda  cop_th.tileable_texture.1.0.hda  lop_th.animate.2.0.hda  lop_th.archive.1.0.hda  lop_th.asset_payload.1.0.hda  lop_th.cache.1.0.hda  lop_th.create_asset.1.0.hda  lop_th.create_asset_lookdev.1.0.hda  lop_th.create_asset_model.1.0.hda  lop_th.create_model.1.0.hda  lop_th.duplicate.1.0.hda  lop_th.export_layer.1.0.hda  lop_th.image_card.1.0.hda  lop_th.image_plane_painter.1.0.hda  lop_th.image_plane_painter.1.1.hda  lop_th.import_asset.1.0.hda  lop_th.import_assets.2.0.hda  lop_th.import_layer.1.0.hda  lop_th.import_shot.1.0.hda  lop_th.karmafogbox.1.0.hda  lop_th.layer_split.1.0.hda  lop_th.light_blocker.1.0.hda  lop_th.light_streaks.1.4.hda  lop_th.lookdev_studio.2.0.hda  lop_th.lpe_tags.1.0.hda  lop_th.material_assigner.1.0.hda  lop_th.mesh_outline.1.0.hda  lop_th.model_validator.1.0.hda  lop_th.playblast.1.0.hda  (+27 more)
otls/cop_th.a_b_slider.1.0/: INDEX__SECTION  Sections.list
otls/cop_th.build_comp.1.0/: INDEX__SECTION  Sections.list
otls/cop_th.cop_material.1.0/: INDEX__SECTION  Sections.list
otls/cop_th.cop_paint.1.0/: INDEX__SECTION  Sections.list
otls/cop_th.depth_cull.1.0/: INDEX__SECTION  Sections.list
otls/cop_th.gradient_map.1.0/: INDEX__SECTION  Sections.list
otls/cop_th.import_lop_camera.1.0/: INDEX__SECTION  Sections.list
otls/cop_th.lop_import.1.0/: INDEX__SECTION  Sections.list
otls/cop_th.mask_painter.1.0/: INDEX__SECTION  Sections.list
otls/cop_th.paint_scatter.1.0/: INDEX__SECTION  Sections.list
otls/cop_th.roto_mask.1.0/: INDEX__SECTION  Sections.list
otls/cop_th.th_a_b_slider.1.0/: INDEX__SECTION  Sections.list
otls/cop_th.tileable_texture.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.animate.2.0/: INDEX__SECTION  Sections.list
otls/lop_th.archive.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.asset_payload.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.asset_thumbnail.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.cache.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.cop_material_library.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.create_asset.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.create_asset_lookdev.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.create_asset_model.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.create_model.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.duplicate.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.export_asset.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.export_layer.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.image_card.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.image_plane_painter.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.image_plane_painter.1.1/: INDEX__SECTION  Sections.list
otls/lop_th.import_asset.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.import_assets.2.0/: INDEX__SECTION  Sections.list
otls/lop_th.import_layer.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.import_shot.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.karmafogbox.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.layer_split.1.0/: INDEX__SECTION  Sections.list
otls/lop_th.light_blocker.1.0/: INDEX__SECTION  (+1 more)
python3.11libs/: pythonrc.py  uiready.py
python3.13libs/: pythonrc.py  uiready.py
python_panels/: project_browser.pypanel
radial_menus/: tumblepipe_pipeline.json
recipes/: README.md
resolver-src/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  houdini_majors.toml
resolver-src/cpp/: plugInfo.json.in  resolver.cpp  resolver.h  th_resolver_core.h
resolver-src/src/: error.rs  lib.rs  resolve.rs  uri.rs  version.rs
resolver-src/tests/: resolve_integration.rs
scripts/: 123.py  audit_legacy_ocio.py  audit_nesting_cycles.py  audit_playblast_paths.py  fix_case_duplicate_category.py  fix_enabled_savepaths.py  generate_changelog.py  migrate_config.py  tt_setup.py  verify_asset_payload_fixes.py  verify_cache_reference_fixes.py  verify_context_chain.py  verify_database_editor_ux.py  verify_dropped_asset_arc_guard.py  verify_entity_casing.py  verify_entity_departments.py  verify_entity_from_context.py  verify_hda_callbacks.py  verify_import_model_variants.py  verify_import_shot_layer_stack.py  verify_lpe_tags.py  verify_playblast_job.py  verify_process_dialog_ux.py  verify_resolver_refresh.py  verify_submit_jobs_entity_selector.py  verify_submit_jobs_entity_tree.py  verify_tracked_asset_counts.py
src/wizard/: Cargo.toml  README.md
src/wizard/src/: lib.rs  main.rs
src/wizard/tests/: scaffold_integration.rs
(+1572 files in other folders)
